loki/full/sts.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: loki-headless
  namespace: loki
spec:
  clusterIP: None
  selector:
    app: loki
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: grpc
      port: 9095
      targetPort: 9095
    - name: gossip
      port: 7946
      targetPort: 7946

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: loki
  namespace: loki
spec:
  serviceName: loki-headless
  replicas: 3
  selector:
    matchLabels:
      app: loki
  template:
    metadata:
      labels:
        app: loki
    spec:
      tolerations:
        - key: "node-role.kubernetes.io/infra"
          operator: "Equal"
          value: ""
          effect: "NoSchedule"
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-role.kubernetes.io/infra
                    operator: Exists
      containers:
        - name: loki
          image: grafana/loki:3.0.0
          args:
            - -target=all
            - -config.file=/etc/loki/loki.yaml
            - -config.expand-env=true
          ports:
            - containerPort: 8080
              name: http
            - containerPort: 9095
              name: grpc
            - containerPort: 7946
              name: gossip
          volumeMounts:
            - name: config
              mountPath: /etc/loki
            - name: data
              mountPath: /data
            - name: custom-ca
              mountPath: /etc/ssl/certs/internal-ca.crt
              subPath: ca.crt
              readOnly: true
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /ready
              port: http
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
      volumes:
        - name: config
          configMap:
            name: loki-config
        - name: custom-ca
          configMap:
            name: custom-ca-certificates
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 10Gi
